adjusted margin to prevent overlap of button and text

--- a/src/pages/basicQuestions.css
+++ b/src/pages/basicQuestions.css
@@ -1,5 +1,6 @@
 .background-image{
     background-image: url('../../public/starry_sky.jpg');
+    margin-bottom: 1.5%;
 }
 .page-title{
     font-size: 3em; 
@@ -16,10 +17,14 @@
 
 .page-footer{
     background-color: black;
-    margin-top: -16px;
+    margin-top: 25px;
 }
 
 .apikey-submit{
     background-color: white;
     color: black;
+}
+
+.form-label{
+    margin-top: 2%;
 }
